--- a/AZ500.md
+++ b/AZ500.md
@@ -3,6 +3,8 @@ This is the set of resources I have used for preparing for the AZ500 exam.
 The exam was updated in September 2021 and I am taking the exam in Q4 2021.
 Please bear this in mind as exam materials are updated continually but may recieve major updates every six months in Q1 and Q3.
 
+[Resources](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#resources)
+
 ## Resources
 * Exam AZ-500: Microsoft Azure Security Technologies: [aka.ms/az500](https://aka.ms/az500)
 * Exam AZ-500: Microsoft Azure Security Technologies – Skills Measured:](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC70)
