--- a/AZ500.md
+++ b/AZ500.md
@@ -4,6 +4,11 @@ The exam was updated in September 2021 and I am taking the exam in Q4 2021.
 Please bear this in mind as exam materials are updated continually but may recieve major updates every six months in Q1 and Q3.
 
 [Resources](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#resources)
+[Worksheet](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#worksheet)
+-
+-
+-
+-
 
 ## Resources
 * Exam AZ-500: Microsoft Azure Security Technologies: [aka.ms/az500](https://aka.ms/az500)
