--- a/AZ500.md
+++ b/AZ500.md
@@ -3,12 +3,12 @@ This is the set of resources I have used for preparing for the AZ500 exam.
 The exam was updated in September 2021 and I am taking the exam in Q4 2021.
 Please bear this in mind as exam materials are updated continually but may recieve major updates every six months in Q1 and Q3.
 
-[Resources](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#resources)
-[Worksheet](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#worksheet)
--
--
--
--
+- [Resources](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#resources)
+- [Worksheet](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#worksheet)
+  - [Manage identity and access (30-35%)](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#manage-identity-and-access-30-35)
+  - [Implement platform protection (15-20%)](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#implement-platform-protection-15-20)
+  - [Manage security operations (25-30%)](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#manage-security-operations-25-30)
+  - [Secure data and applications (25–30%)](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#secure-data-and-applications-2530)
 
 ## Resources
 * Exam AZ-500: Microsoft Azure Security Technologies: [aka.ms/az500](https://aka.ms/az500)
