--- a/AZ500.md
+++ b/AZ500.md
@@ -12,7 +12,7 @@ Please bear this in mind as exam materials are updated continually but may recie
 
 ## Resources
 * Exam AZ-500: Microsoft Azure Security Technologies
-  * [aka.ms/az500](https://aka.ms/az500)
+  * [aka.ms/AZ500](https://aka.ms/az500)
   * [Skills Measured](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC70)
 * Mark O'Shea exam guide has been updated to reflect the new material: [Preparing for the AZ-500 Microsoft Azure Security Technologies Exam (September 2021 Update)](https://intunedin.net/2021/10/19/preparing-for-the-az-500-microsoft-azure-security-technologies-exam-september-2021-update/)
 * The [Mark Grimes CERT guide](https://youtube.com/playlist?list=PLVY1cokqlbC5C5EnjTTJAZFpX9I4FT8Uy) here is worth a watch to help you gauge how much time you will need to prepare and what kind of process to follow.
