--- a/AZ500.md
+++ b/AZ500.md
@@ -17,7 +17,7 @@ Please bear this in mind as exam materials are updated continually but may recie
 * Mark O'Shea exam guide has been updated to reflect the new material: [Preparing for the AZ-500 Microsoft Azure Security Technologies Exam (September 2021 Update)](https://intunedin.net/2021/10/19/preparing-for-the-az-500-microsoft-azure-security-technologies-exam-september-2021-update/)
 * The [Mark Grimes CERT guide](https://youtube.com/playlist?list=PLVY1cokqlbC5C5EnjTTJAZFpX9I4FT8Uy) here is worth a watch to help you gauge how much time you will need to prepare and what kind of process to follow.
 <br>
-What works for some may not work for others. But I can recommend three things:<br>
+What works for some may not work for others. But I can recommend three things:
 <br>
 1. Read 'Make It Stick: The Science of Successful Learning' (ISBN:9780674729018)<br>
 2. Printing this page out and checking off the docs as you move through the list.<br>
