--- a/AZ500.md
+++ b/AZ500.md
@@ -1,7 +1,9 @@
 # Prepping for AZ500
 This is the set of resources I have used for preparing for the AZ500 exam.
 The exam was updated in September 2021 and I am taking the exam in Q4 2021.
-Please bear this in mind as exam materials are updated continually but may recieve major updates every six months in Q1 and Q3.
+Please bear this in mind as exam materials are updated continually but may recieve major updates every six months, typically in Q1 and Q3.
+
+## Contents
 
 - [Resources](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#resources)
 - [Worksheet](https://github.com/gvnshtn/ExamGuides/blob/main/AZ500.md#worksheet)
