--- a/AZ500.md
+++ b/AZ500.md
@@ -16,6 +16,11 @@ Please bear this in mind as exam materials are updated continually but may recie
 * Exam AZ-500: Microsoft Azure Security Technologies
   * [aka.ms/AZ500](https://aka.ms/az500)
   * [Skills Measured](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC70)
+* MS Learn content is still being updated, although new content has been posted it does seem to have some teething issues in alignment with the Skills Measured page.
+  *  [AZ-500 part-1: Manage Identity and Access](https://docs.microsoft.com/en-us/learn/paths/manage-identity-access/)
+  *  [AZ-500 part2: Implement platform protection](https://docs.microsoft.com/en-us/learn/paths/implement-platform-protection/)
+  *  [AZ-500 part 3: Secure your data and applications](https://docs.microsoft.com/en-us/learn/paths/secure-your-data-applications/)
+  *  [AZ-500 part 4: Manage security operation](https://docs.microsoft.com/en-us/learn/paths/manage-security-operation/)
 * Mark O'Shea exam guide has been updated to reflect the new material:
   *  [Preparing for the AZ-500 Microsoft Azure Security Technologies Exam (September 2021 Update)](https://intunedin.net/2021/10/19/preparing-for-the-az-500-microsoft-azure-security-technologies-exam-september-2021-update/)
 * The [Mark Grimes](https://twitter.com/markbgrimes) is worth a watch to help you gauge how much time you will need to prepare and what kind of process to follow.
@@ -23,9 +28,9 @@ Please bear this in mind as exam materials are updated continually but may recie
 <br>
 What works for some may not work for others. But I can recommend three things:
 <br>
-1. Read 'Make It Stick: The Science of Successful Learning' (ISBN:9780674729018)<br>
-2. Printing this page out and checking off the docs as you move through the list.<br>
-3. As you go through the docs, have a test tenant in place and DO the things. Make sure you understand them as you go, don't just robotically click buttons assuming you'll remember what it is you did and why. You'll need that for the test.<br>
+1. Read 'Make It Stick: The Science of Successful Learning' (ISBN:9780674729018).
+2. Print this page out and check off the docs as you move through the list.
+3. As you go through the docs, have a test tenant in place and DO the things. Make sure you understand them as you go, don't just robotically click buttons assuming you'll remember what it is you did and why. You'll need that for the test.
 
 ## Worksheet
 Credit to [Mark O'Shea](https://twitter.com/intunedin) for putting this list together, I am standing on his shoulders with this.
