--- a/AZ500.md
+++ b/AZ500.md
@@ -16,7 +16,7 @@ Please bear this in mind as exam materials are updated continually but may recie
 * Exam AZ-500: Microsoft Azure Security Technologies
   * [aka.ms/AZ500](https://aka.ms/az500)
   * [Skills Measured](https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VC70)
-* MS Learn content is still being updated, although new content has been posted it does seem to have some teething issues in alignment with the Skills Measured page.
+* MS Learn content for the updated exam has been posted, although it does have some teething issues in terms of alignment with the Skills Measured page.
   *  [AZ-500 part-1: Manage Identity and Access](https://docs.microsoft.com/en-us/learn/paths/manage-identity-access/)
   *  [AZ-500 part2: Implement platform protection](https://docs.microsoft.com/en-us/learn/paths/implement-platform-protection/)
   *  [AZ-500 part 3: Secure your data and applications](https://docs.microsoft.com/en-us/learn/paths/secure-your-data-applications/)
